logging bij getstate als oefenen